fix purchase price color on dark mode

--- a/ui/scss/component/_purchase.scss
+++ b/ui/scss/component/_purchase.scss
@@ -1,6 +1,6 @@
 .credit-amount {
   font-weight: bold;
-  color: var(--color-text);
+  color: var(--color-purchased-text);
 
   .icon {
     margin-bottom: 2px;
